--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.6",
+    "@heroicons/react": "^2.1.3",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.2.6",
     "autoprefixer": "^10.4.20",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
